Fix mailing list signup form on mobile

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -127,10 +127,6 @@ a.navbar-item:hover {
     }
 }
 
-#test-circ circle {
-    transform: translateX(100px);
-}
-
 @import "spacing.scss";
 @import "anims.scss";
 @import "sticky-footer.scss";
